--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<script>
-location.href="comments.html";
-</script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Thoughts</title>
+    <link href="main.css" type="text/css" rel="stylesheet" />
+  </head>
+  <body>
+    Hello
+  </body>
+</html>
