--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link href="main.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    Hello
+   
+   <center id="main">
+     <center id="content">
+     <h1>Thoughts</h1>
+     <h3>An open source, easy to use comment system in PHP/AJAX</h3>
+     <div style="height:1px;width:80%;background-color:gray"></div>
+     </center>
+   </center>
   </body>
 </html>
