--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
      <center id="content">
      <h1>Thoughts</h1>
      <h3>An open source, easy to use comment system in PHP/AJAX</h3>
-     <div style="height:1px;width:80%;background-color:gray"></div>
+     <div style="height:1px;width:80%;background-color:silver"></div>
+     <br>
+     <a class="formbtn" href="http://github.com/airbrowsetechnologies/thoughts">Go to our GitHub page</a>
+     <a class="formbtn" href="http://airbrowse.x10host.com/projects/thoughts">Visit Thoughts</a>
      </center>
    </center>
   </body>
