--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    
    <center id="main">
      <center id="content">
+       <img src="img/logo.png" height="200" />
      <h1>Thoughts</h1>
      <h3>An open source, easy to use comment system in PHP/AJAX</h3>
      <br>
