--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <a class="formbtn" href="http://airbrowse.x10host.com/projects/thoughts">Visit Thoughts</a>
      
       <div id="comments">
-     <div onclick="loadComments()" id="load" style="width:90%;padding:20px;outline:none;border:2px solid silver;border-radius:10px;margin-top:50px">Load comments</div>
+     <div onclick="loadComments()" id="load" style="width:50%;padding:20px;outline:none;border-top:1px solid silver;border-radius:0px;margin-top:50px">Load comments</div>
    
      </div>
      </center>
