--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script>
       function loadComments(){
         document.getElementById("comments").innerHTML = "<iframe src=\"http://airbrowse.x10host.com/projects/thoughts/index.php\" style=\"width:90%;height:500px;outline:none;border:2px solid silver;border-radius:10px;margin-top:50px\">";
+        window.scrollTo(0,document.body.scrollHeight);
       }
     </script>
   </head>
