--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="main.css" type="text/css" rel="stylesheet" />
     <script>
       function loadComments(){
-        document.getElementById("comments").innerHTML = "<iframe src=\"http://airbrowse.x10host.com/projects/thoughts/index.php\" style=\"width:90%;height:500px;outline:none;border:2px solid silver;border-radius:10px;margin-top:50px\">";
+        document.getElementById("comments").innerHTML = "<iframe src=\"http://airbrowse.x10host.com/projects/thoughts/index.php\" >";
         window.scrollTo(0,document.body.scrollHeight);
       }
     </script>
